# MnemosyneOS

./: .env.example  .gitignore  AI_USER_RUNTIME.md  ARCHITECTURE.md  EXECUTION_PLANE.md  GETTING_STARTED.md  HARNESS.md  HARNESS_ARCHITECTURE.md  INTERFACES.md  LANGUAGE_DECISION.md  MEMORY_ARCHITECTURE.md  MEMORY_STRATEGY.md  MODEL_GATEWAY.md  Makefile  PROJECT_DIRECTION.md  README.md  SKILL_SYSTEM.md  TECH_STACK.md  TESTBED_ARCHITECTURE.md  TEST_STRATEGY.md  WEB_SEARCH_RUNTIME.md  go.mod
.github/workflows/: ci.yml
cmd/mnemosyne-api/: main.go
cmd/mnemosyne-harness/: main.go
cmd/mnemosynectl/: bootstrap.go  bootstrap_test.go  chatcli.go  chatcli_test.go  colors.go  daemon.go  init_interactive.go  init_interactive_test.go  main.go  root.go
docs/memory/: MEMORY_ARCHITECTURE.md  MEMORY_CONSOLIDATION_SPEC.md  MEMORY_ORCHESTRATION_SPEC.md  MEMORY_STRATEGY.md  PROCEDURAL_MEMORY_SPEC.md  README.md  WORKING_MEMORY_SPEC.md
docs/skills/: SKILL_REGISTRY.md
internal/airuntime/: orchestrator.go  orchestrator_test.go  store.go  types.go
internal/api/: server.go  web.go  web_templates.go  web_test.go
internal/appcli/: serve.go
internal/approval/: store.go  types.go
internal/chat/: agent_loop.go  dialogue_agent.go  dialogue_agent_test.go  intent.go  intent_test.go  locale.go  route_agent.go  route_agent_test.go  service.go  (+5 more)
notes/: root-smoke-2.txt  root-smoke.txt
python/: README.md  pyproject.toml
python/mnemosyne_sdk/: __init__.py  client.py  models.py
scripts/: ci-harness.sh  install-macos-service.sh  refresh-harness-baselines.sh  uninstall-macos-service.sh
(+253 files in other folders)
